# Health_AI_MVP

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  exceptions.py  main.py
backend/app/data/: crisis_resources.json  risk_keywords.json
backend/app/models/: __init__.py  enums.py  schemas.py  session.py
backend/app/repositories/: base.py  memory_session.py
backend/app/routers/: chat.py  health.py
backend/app/services/: anonymizer.py  chatbot.py  risk_scorer.py  session_service.py  triage_evaluator.py
backend/app/utils/: logging_config.py
backend/tests/: __init__.py  conftest.py  test_anonymizer.py  test_api_integration.py  test_chatbot.py  test_risk_scorer.py  test_session_service.py  test_triage_evaluator.py
frontend/: .gitignore  Dockerfile  Dockerfile.dev  README.md  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: layout.tsx  page.tsx
frontend/src/components/chat/: ChatContainer.tsx  ChatInput.tsx  CrisisBanner.tsx  HandoffNotice.tsx  MessageBubble.tsx  StreamingMessage.tsx  TypingIndicator.tsx  WelcomeScreen.tsx
frontend/src/hooks/: useAutoScroll.ts  useChat.ts  useSSE.ts  useSession.ts  useTheme.ts
frontend/src/services/: api.ts  sse.ts
frontend/src/stores/: chatStore.ts  uiStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: cn.ts  constants.ts  formatters.ts
(+11 files in other folders)
